# Trabalho-OA

./: .gitignore  CMakeLists.txt  Makefile  README.md  file1.txt  listc.c  listcpp.cpp  main.cpp  my_drive.cpp
include/: default_params.hpp  disk.h  disk.hpp  libdrive.h  libfat.h  libfat.hpp
src/: disk.cpp  libdrive.cpp  libfat.cpp  menu-main.cpp
test/: test-disk.cpp  test-drive-simple.cpp  test-fat-simple.cpp  test-libfat.cpp
